# ondes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  WINNER_DECISIONS.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.claude/rules/: trello-board.md
.github/workflows/: ci.yml
examples/: __init__.py  fit_image.py
examples/data/architecture_sweep/: architecture_sweep.md  results.csv
ondes/: __init__.py  basis.py  encoding.py
ondes/basis/: __init__.py  _base.py  bacon.py  comb.py  finer.py  fkan.py  hsiren.py  mfn.py  pnf.py  rff.py  siren.py  staf.py  winner.py  wire.py
scripts/: aggregate_sweep.py  requirements-mlx.txt  sweep_astronaut.sh  validate_winner_astronaut.py  validate_winner_highfreq.py
tests/: test_bacon.py  test_basis.py  test_basis_winner.py  test_benchmark.py  test_comb.py  test_encoding.py  test_film_validation.py  test_finer.py  test_fkan.py  test_image_fitting.py  test_mfn.py  test_pnf.py  test_rff.py  test_scannability.py  test_staf.py
