[project]
name = "ondes"
version = "0.1.0"
description = "Functional implementations and tests of implicit neural representations (SIREN, H-SIREN, WIRE) in JAX/Equinox"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ammar Tarajia" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "equinox>=0.13.8",
    "jax>=0.10.0",
    "jax-tqdm>=0.4.0",
    "jaxtyping>=0.3.9",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
    "pre-commit",
    "bandit",
    "optax>=0.2.8",
    "typer>=0.25.1",
    "pillow>=12.2.0",
]

[project.urls]
Homepage = "https://github.com/DarkbyteAT/ondes"
Repository = "https://github.com/DarkbyteAT/ondes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
